<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_f5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_shape_1030_inputbox">

            <EditText
                android:id="@+id/old_password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="20"
                android:hint="@string/place_edit_old_pw"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray_f5"/>

            <EditText
                android:id="@+id/new_password_edt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="20"
                android:hint="@string/place_edit_new_pw"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray_f5"/>

            <EditText
                android:id="@+id/new_password_edt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="20"
                android:hint="@string/confirmation_new_pw"/>


        </LinearLayout>
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/confirmation_new_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/green_button_selector"
            android:text="@string/done"
            android:textColor="@color/white" />
    </TableLayout>


</LinearLayout>
