<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="#000000"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:background="@color/gray_ec" />


    <RadioGroup
        android:id="@+id/tab_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/home_tab"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/tab_bg_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/tab_home_selector"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:text="@string/home"
            android:textColor="@color/tab_color_selecter"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/orders_tab"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/tab_bg_selector"
            android:button="@android:color/transparent"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/tab_orders_selector"
            android:gravity="center"
            android:paddingBottom="6dip"
            android:paddingTop="6dip"
            android:text="@string/order"
            android:textColor="@color/tab_color_selecter"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/clients_tab"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_bg_selector"
            android:button="@android:color/transparent"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/tab_clients_selector"
            android:gravity="center"
            android:paddingBottom="6dip"
            android:paddingTop="6dip"
            android:text="@string/client"
            android:textColor="@color/tab_color_selecter"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/work_tab"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_bg_selector"
            android:button="@android:color/transparent"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/tab_work_selector"
            android:gravity="center"
            android:paddingBottom="6dip"
            android:paddingTop="6dip"
            android:text="@string/work"
            android:textColor="@color/tab_color_selecter"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/mine_tab"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_bg_selector"
            android:button="@android:color/transparent"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/tab_mine_selector"
            android:gravity="center"
            android:paddingBottom="6dip"
            android:paddingTop="6dip"
            android:text="@string/me"
            android:textColor="@color/tab_color_selecter"
            android:textSize="12sp" />


    </RadioGroup>
</LinearLayout>
