<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_f5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="gone"
        android:background="@color/green_0c">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/kh_title"/>

    <TextView
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:textColor="@color/white"
        android:visibility="gone"
        android:text="@string/filter"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:background="@color/gray_f5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/my_buyer_container"
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <ImageView
                android:id="@+id/iv_my_buyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:background="@drawable/ic_1030_kh_my_customer"/>

            <RelativeLayout
                android:layout_toRightOf="@id/iv_my_buyer"
                android:layout_marginLeft="14dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.TextView.Mine.Item.New"
                    android:text="@string/kh_my_buyer"/>

                <TextView
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_1030_home_right_arrows"/>

                <View
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_e9"/>

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/my_seller_container"
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <ImageView
                android:id="@+id/iv_my_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:background="@drawable/ic_1030_kh_my_customer"/>

            <RelativeLayout
                android:layout_toRightOf="@id/iv_my_seller"
                android:layout_marginLeft="14dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.TextView.Mine.Item.New"
                    android:text="@string/kh_my_seller"/>

                <TextView
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_1030_home_right_arrows"/>



                <View
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_e9"/>

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/check_repeat_container"
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <ImageView
                android:id="@+id/iv_check_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:background="@drawable/ic_1030_kh_check_repeat"/>

            <RelativeLayout
                android:layout_toRightOf="@id/iv_check_repeat"
                android:layout_marginLeft="14dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.TextView.Mine.Item.New"
                    android:text="@string/kh_check_repeat"/>

                <TextView
                    android:id="@+id/tv_add_customer"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_1030_home_right_arrows"/>

            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
