<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/abc_action_bar_default_height_material"
    android:background="@color/white" >


    <ImageView
        android:id="@id/ab_back_button"
        android:layout_width="56dip"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@drawable/abc_list_selector_holo_dark"
        android:clickable="true"
        android:contentDescription="@string/empty"
        android:padding="16dip"
        android:scaleType="centerInside"
        android:src="@drawable/ic_15_09_14_back" />


    <TextView
        android:id="@id/ab_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/t_customer_detail"
        android:textColor="@color/black"
        android:textSize="18sp" />
    <!--
    <android.support.v7.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_centerVertical="true"
        android:background="@null"
        android:layout_toLeftOf="@+id/ab_right_button"
        android:layout_toRightOf="@+id/ab_back_button"
        />

        -->

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toLeftOf="@+id/ab_right_button"
        android:layout_toRightOf="@+id/ab_back_button"
        android:background="@drawable/bg_1030_search_input">

        <ImageView
            android:id="@+id/search_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_1030_search"/>
        <EditText
            android:id="@+id/input_search_container"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:textColorHint="@color/gray_99"
            android:hint="@string/kh_search_hint"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/search_image"
            android:imeOptions="actionDone"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@null"/>

        <ImageView
            android:id="@+id/delete_search_key"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_1030_emotionstore_progresscancelbtn"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/ab_right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:padding="12dip"
        android:background="@color/white"
        android:text="筛选"
        android:textColor="@color/green"
        android:textSize="14sp" />

</RelativeLayout>