<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_shape_1030_inputbox">

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textSize="16sp"
                android:inputType="phone"
                android:maxLength="20"
                android:textColor="@color/gray_33"
                android:textColorHint="@color/gray_99"
                android:padding="15dp"
                android:background="@null"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray_f5"/>

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="15dp"
                android:background="@null"
                android:password="true"
                android:inputType="textPassword"
                android:textColorHint="@color/gray_99"
                android:textColor="@color/gray_33"
                android:maxLength="20"
                android:hint="@string/password"/>

        </LinearLayout>

        <TextView
            android:id="@+id/password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/ll_container"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/forgot_password"/>

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/green_button_selected"
            android:text="@string/login"
            android:textColor="@color/white" />
    </TableLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_shape_150915_login_coners"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:padding="30dp"
        android:orientation="vertical" >

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_150915_login_header"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_shape_150916_login_corners25_trans_32_black"
            android:drawablePadding="12dip"
            android:hint="@string/user_name"
            android:textSize="16sp"
            android:inputType="phone"
            android:maxLength="20"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingBottom="12dip"
            android:paddingLeft="24dip"
            android:paddingTop="12dip" >
        </EditText>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_shape_150916_login_corners25_trans_32_black"
            android:drawablePadding="12dip"
            android:textSize="16sp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingBottom="12dip"
            android:paddingLeft="24dip"
            android:paddingTop="12dip" >
        </EditText>

        <TextView
            android:id="@+id/password_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:clickable="true"
            android:layout_gravity="right"
            android:layout_marginRight="12dip"
            android:paddingTop="8dip"
            android:paddingBottom="10dp"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="修改密码"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@drawable/btn_150916_green_conners25_selector"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            />

    </LinearLayout>

    -->
</LinearLayout>